syntax = "proto3";

package chat;

// Ping probe for connection check
message PingRequest {}
message PingResponse {
  bool success = 1;
  string message = 2;
}

// Chat service for client-server communication
service ChatService {
  // Stream for receiving messages
  rpc JoinChat(JoinRequest) returns (stream ChatMessage);
  
  // Send a message to the chat
  rpc SendMessage(ChatMessage) returns (SendResponse);
  
  // Get server status
  rpc GetServerStatus(StatusRequest) returns (ServerStatus);

  rpc Ping(PingRequest) returns (PingResponse);
}

// RAFT service for server-server communication
service RaftService {
  // Request vote from other servers
  rpc RequestVote(VoteRequest) returns (VoteResponse);
  
  // Append log entries (also used as heartbeat)
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  
  // Redirect client to leader
  rpc RedirectToLeader(RedirectRequest) returns (RedirectResponse);
}

// DNS service for service discovery
service DNSService {
  // Lookup server by name
  rpc Lookup(LookupRequest) returns (LookupResponse);
  
  // Register server in DNS
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

// Message types

message JoinRequest {
  string user_id = 1;
  string username = 2;
}

message ChatMessage {
  string user_id = 1;
  string username = 2;
  string content = 3;
  string room_id = 4;
  int64 timestamp = 5;
  string message_id = 6;
}

message SendResponse {
  bool success = 1;
  string message_id = 2;
  string error = 3;
}

message StatusRequest {
  string user_id = 1;
}

message ServerStatus {
  string server_id = 1;
  string role = 2; // "leader", "follower", "candidate"
  string leader_id = 3;
  int32 term = 4;
  repeated string peer_servers = 5;
}

// RAFT protocol messages
message VoteRequest {
  int32 term = 1;
  string candidate_id = 2;
  int32 last_log_index = 3;
  int32 last_log_term = 4;
}

message VoteResponse {
  int32 term = 1;
  bool vote_granted = 2;
}

message LogEntry {
  int32 term = 1;
  int32 index = 2;
  bytes data = 3;
}

message AppendEntriesRequest {
  int32 term = 1;
  string leader_id = 2;
  int32 prev_log_index = 3;
  int32 prev_log_term = 4;
  repeated LogEntry entries = 5;
  int32 leader_commit = 6;
}

message AppendEntriesResponse {
  int32 term = 1;
  bool success = 2;
  int32 match_index = 3;
}

message RedirectRequest {
  string client_id = 1;
}

message RedirectResponse {
  string leader_address = 1;
  int32 leader_port = 2;
}

// DNS service messages
message LookupRequest {
  string server_name = 1;
}

message LookupResponse {
  string address = 1;
  int32 port = 2;
  bool is_leader = 3;
}

message RegisterRequest {
  string server_name = 1;
  string address = 2;
  int32 port = 3;
  bool is_leader = 4;
}

message RegisterResponse {
  bool success = 1;
  string error = 2;
}
